[package]
name = "aoc-2015"
version = "0.1.0"
authors = ["Gustavo Di Pietro <gustavo.dipietro@deustechnology.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
rayon = "1.2.0"
md5 = "0.6.1"
regex = "1"
lazy_static = "1.4.0"
permutohedron = "0.2.4"
serde_json = "1.0"